--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,10 @@
 origin: http://localhost:8080/file
-port: 8080
+http:
+  enabled: true
+  port: 8080
+grpc:
+  enabled: true
+  port: 50051
 logger:
   level: info
   format: text
