--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ RABBITMQ_USERNAME="guest"
 RABBITMQ_PASSWORD="guest"
 S3_ACCESS_KEY=FFXIIY35zo9zEqkDHQw0
 S3_SECRET_KEY=psAY4kDqemhHkqiEvvdmYE1dbqDGK5xdzjcobn9Y
+
+# RabbitMQ Container
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+
+# Minio Container
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
