--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-API_KEY="secret-key"
-RABBITMQ_USERNAME="guest"
-RABBITMQ_PASSWORD="guest"
+API_KEY=secret-key
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
 S3_ACCESS_KEY=FFXIIY35zo9zEqkDHQw0
 S3_SECRET_KEY=psAY4kDqemhHkqiEvvdmYE1dbqDGK5xdzjcobn9Y
 
