--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,20 @@ services:
     command: server /data --console-address ":9001"
     volumes:
       - ./minio:/data
+
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
+    volumes:
+      - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    ports:
+      - "6379:6379"
+
+volumes:
+  redisdata:
